# llm-dp-finetune

./: .gitignore  CITATION.bib  LICENSE  README.md  fine_tune.py  requirements.txt  setup.cfg
configs/fine-tune/: deepspeed_stage2.json  deepspeed_stage3.json  echr-llama-7b-dp4.yml  echr-llama2-7b-dp8.yml  echr-llama2-7b-scrubbed.yml  echr-llama2-7b-undefended.yml  echr-llama3-8b-Inst-dp8.yml  echr-llama3-8b-Inst-undefended.yml  enron-llama2-7b-dp.yml  enron-llama2-7b-scrubbed.yml
data/echr/: echr.py
data/enron/: enron.py
src/llm_pft/: local_configs.py
src/llm_pft/arguments/: dataset_args.py  env_args.py  model_args.py  privacy_args.py  trainer_args.py
src/llm_pft/dataset/: dataset.py  real_dataset.py
src/llm_pft/models/: language_model.py  llama2.py  model_factory.py
src/llm_pft/ner/: flair_tagger.py
src/llm_pft/utils/: callbacks.py  python_helper.py
