[metadata]
    name        = llm-pft
    version     = 0.0.2
    description = Private fine-tuning for LLMs
    url         = https://github.com/jyhong836/llm-private-finetune
    author      = Junyuan Hong
    author_email= jyhong836@gmail.com
    license     = MIT License

[options]
package_dir=
    =src
packages=find:
install_requires = 
    torch>=2.0
    transformers==4.29.0
    pydantic==1.10
    deepspeed==0.8.3
    tokenizers==0.13.3
    flair @ git+https://github.com/flairNLP/flair
    wandb
    tqdm
    datasets
    scipy==1.10.1
    fastDP @ git+https://github.com/jyhong836/fast-differential-privacy.git
    fairscale
    peft

[options.packages.find]
where=src
